Support for ignore domain set.
